# Projeto02-FastAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 40aacd88b137_add_table_products.py  5d9153324dc9_add_columns_in_table_user.py  7901d09fa321_add_categories_table.py  989cdee60e40_add_table_user.py  9f864bc3861e_add_peoples_table.py
app/routers/: category.py  deps.py  poc.py  product.py  user.py
app/schemas/: base.py  category.py  people.py  product.py  user.py
app/test/: conftest.py
app/test/routers/: test_category_router.py  test_product_router.py  test_user_router.py
app/test/schemas/: test_category_schema.py  test_people_schema.py  test_product_schema.py  test_user_schema.py
app/test/user_cases/: test_category_use_case.py  test_product_use_case.py  test_user_use_case.py
app/use_cases/: category.py  people.py  poc.py  product.py  user.py
